# DataStructures

PL1Ds/: Cola.cpp  Cola.hpp  ColadeCamiones.cpp  ColadeCamiones.hpp  Coordinate.hpp  Label.cpp  Paquete.hpp  Pila.cpp  Pila.hpp  auxLib.hpp  main.cpp
PL2Ds/: CMakeLists.txt  Cola.cpp  ColadeCamiones.cpp  ColadeCamiones.hpp  Coordinate.cpp  Label.cpp  Label.hpp  Paquete.cpp  Pila.hpp  auxLib.cpp
